--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </ul>
       </nav>
       <!--                                        IMG       -->
-      <a class="head__img"
-        ><img src="./images/logo-black.svg" alt="logo-black"
+      <a class="head__logo-img"
+        ><img class="head__img" src="./images/logo-black.svg" alt="logo-black"
       /></a>
       <!--                                        IMG END          -->
       <address class="address">
@@ -55,60 +55,70 @@
 
       <!--=======================LOTS===============================-->
 
-      <section class="lots">
-        <h2 class="lots__heading">лоты</h2>
+     <section class="lots">
+    <h2 class="lots__heading">лоты</h2>
 
-        <div class="lots__card-list">
-          <article class="lot lot1">
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Фильм режиссёра, который бросил киношколу
-            </h3>
-            <p class="card__text">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </p>
-          </article>
+    <ul class="lots__card-list">
 
-          <article class="lot lot2">
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Книга, где описан один скучный день из жизни<br />
-              рекламного агента
-            </h3>
-            <p class="card__text">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
-          </article>
+        <li class="lots__card-list-item">
+            <article class="card card-film">
+                <a href="#" class="card-link">
+                    <div class="overlay"></div>
+                    <h3 class="card__title">
+                        Фильм режиссёра, который бросил киношколу
+                    </h3>
+                    <p class="card__text">
+                        Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                        ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                    </p>
+                </a>
+            </article>
+        </li>
 
-          <article class="lot lot3">
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Картина, которую повторит даже 5-летний сын<br />
-              маминой подруги
-            </h3>
-            <p class="card__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </p>
-          </article>
-        </div>
-        
-        <div class="lots__look-more">
-            <a href="#" class="lots__look-more-link">посмотреть больше</a>
-        </div>
-      </section>
+        <li class="lots__card-list-item">
+            <article class="card card-book">
+                <a href="#" class="card-link">
+                    <div class="overlay"></div>
+                    <h3 class="card__title">
+                        Книга, где описан один скучный день из жизни рекламного агента
+                    </h3>
+                    <p class="card__text">
+                        Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский.
+                        В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с
+                        античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                        «Улисса» Джеймса Джойса?
+                    </p>
+                </a>
+            </article>
+        </li>
+
+        <li class="lots__card-list-item">
+            <article class="card card-pic">
+                <a href="#" class="card-link">
+                    <div class="overlay"></div>
+                    <h3 class="card__title">
+                        Картина, которую повторит даже 5-летний сын маминой подруги
+                    </h3>
+                    <p class="card__text">
+                        Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                        Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это —
+                        одна из революционных работ Кандинского?
+                    </p>
+                </a>
+            </article>
+        </li>
+    </ul>
+
+
+    <a href="#" class="lots__look-more-link">посмотреть больше</a>
+
+
+</section>
 
       <!-- ========================ABOUT=========================================-->
       <section class="about">
         <div class="about__column">
-          <div class="first__column">
+          <div class="logo__column">
             <div class="container">
               <div class="about__logo">
                 <img
@@ -119,27 +129,26 @@
               </div>
             </div>
           </div>
-          <div class="second__column">
+          <div class="text__column">
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p>
-                Здесь вы не встретите очередное пафосное собрание невероятно
-                дорогого антиквариата. Наши лоты вообще не должны были
-                попасть<br />
-                ни на один аукцион. Потому что кому нужен дневник
-                девочки-подростка или картина, которую может нарисовать даже
-                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+     Здесь вы не встретите очередное пафосное собрание невероятно
+     дорогого антиквариата. Наши лоты вообще не должны были попасть
+     ни на один аукцион. Потому что кому нужен дневник девочки-
+     подростка или картина, которую может нарисовать даже ребёнок? 
+     Кому нужны все эти странные вещи, созданные любителями?
               </p>
 
+
               <p>
-                Слишком сложные или, наоборот, слишком простые. Опережающие своё
-                время. В пух и прах растерзанные критиками. Непринятые и
-                непонятые. Когда-то они казались просто неудачными. Но,
-                несмотря<br />
-                на критику, кажущуюся простоту или сложность, сейчас без этих
-                лотов невозможно представить современную культуру. Когда в эти
-                вещи не верил никто, продолжали верить их создатели. И сейчас
-                эти лоты<br />стали культовыми.
+      Слишком сложные или, наоборот, слишком простые. Опережающие
+      своё время. В пух и прах растерзанные критиками. Непринятые и
+      непонятые. Когда-то они казались просто неудачными. Но, несмотря
+      на критику, кажущуюся простоту или сложность, сейчас без этих лотов
+      невозможно представить современную культуру. Когда в эти вещи не
+      верил никто, продолжали верить их создатели. И сейчас эти лоты
+      стали культовыми.
               </p>
             </div>
           </div>
@@ -171,17 +180,17 @@
 
       <ul class="foo__soc-list">
         <li class="foo__soc-item">
-          <a class="foo__soc-link" href="#">
+          <a class="foo__soc-link" href="#" target="_blank">
             <img class="foo__soc-icon" src="./images/yt.svg" alt="youtube" />
           </a>
         </li>
         <li class="foo__soc-item">
-          <a class="foo__soc-link" href="#">
+          <a class="foo__soc-link" href="#" target="_blank">
             <img class="foo__soc-icon" src="./images/vk.svg" alt="VK" />
           </a>
         </li>
         <li class="foo__soc-item">
-          <a class="foo__soc-link" href="#">
+          <a class="foo__soc-link" href="#" target="_blank">
             <img
               class="foo__soc-icon"
               src="./images/pinterest.svg"
