--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header class="head">
       <nav>
         <ul class="head__menu">
-          <li class="nav__item-none"><a href="#">главная</a></li>
-          <li class="nav__item"><a href="#">посмотреть лоты</a></li>
-          <li class="nav__item"><a href="#">об аукционе</a></li>
+          <li class="nav__item nav__item-none"><a class="head__link head__link-no-under" href="#">главная</a></li>
+          <li class="nav__item"><a class="head__link" href="#">посмотреть лоты</a></li>
+          <li class="nav__item"><a class="head__link" href="#">об аукционе</a></li>
         </ul>
       </nav>
       <!--                                        IMG       -->
@@ -55,65 +55,65 @@
 
       <!--=======================LOTS===============================-->
 
-     <section class="lots">
-    <h2 class="lots__heading">лоты</h2>
+      <section class="lots">
+        <h2 class="lots__heading">лоты</h2>
 
-    <ul class="lots__card-list">
-
-        <li class="lots__card-list-item">
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
             <article class="card card-film">
-                <a href="#" class="card-link">
-                    <div class="overlay"></div>
-                    <h3 class="card__title">
-                        Фильм режиссёра, который бросил киношколу
-                    </h3>
-                    <p class="card__text">
-                        Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                        ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-                    </p>
-                </a>
+              <a href="#" class="card-link">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </a>
             </article>
-        </li>
+          </li>
 
-        <li class="lots__card-list-item">
+          <li class="lots__card-list-item">
             <article class="card card-book">
-                <a href="#" class="card-link">
-                    <div class="overlay"></div>
-                    <h3 class="card__title">
-                        Книга, где описан один скучный день из жизни рекламного агента
-                    </h3>
-                    <p class="card__text">
-                        Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский.
-                        В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с
-                        античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
-                        «Улисса» Джеймса Джойса?
-                    </p>
-                </a>
+              <a href="#" class="card-link">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </a>
             </article>
-        </li>
+          </li>
 
-        <li class="lots__card-list-item">
+          <li class="lots__card-list-item">
             <article class="card card-pic">
-                <a href="#" class="card-link">
-                    <div class="overlay"></div>
-                    <h3 class="card__title">
-                        Картина, которую повторит даже 5-летний сын маминой подруги
-                    </h3>
-                    <p class="card__text">
-                        Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-                        Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это —
-                        одна из революционных работ Кандинского?
-                    </p>
-                </a>
+              <a href="#" class="card-link">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </a>
             </article>
-        </li>
-    </ul>
+          </li>
+        </ul>
 
-
-    <a href="#" class="lots__look-more-link">посмотреть больше</a>
-
-
-</section>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      </section>
 
       <!-- ========================ABOUT=========================================-->
       <section class="about">
@@ -133,19 +133,19 @@
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p>
-     Здесь вы не встретите очередное пафосное собрание невероятно
-     дорогого антиквариата. Наши лоты вообще не должны были попасть
-     ни на один аукцион. Потому что кому нужен дневник девочки-
-     подростка или картина, которую может нарисовать даже ребёнок? 
-     Кому нужны все эти странные вещи, созданные любителями?
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник девочки-
+                подростка или картина, которую может нарисовать даже ребёнок?
+                Кому нужны все эти странные вещи, созданные любителями?
               </p>
-        <p>     Слишком сложные или, наоборот, слишком простые. Опережающие
-     своё время. В пух и прах растерзанные критиками. Непринятые и
-     непонятые. Когда-то они казались просто неудачными. Но, несмотря
-     на критику, кажущуюся простоту или сложность, сейчас без этих лотов
-     невозможно представить современную культуру. Когда в эти вещи не
-     верил никто, продолжали верить их создатели. И сейчас эти лоты
-     стали культовыми.
+                Слишком сложные или, наоборот, слишком простые. Опережающие
+                своё время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих лотов 
+                невозможно представить современную культуру. Когда в эти вещи не
+                верил никто, продолжали верить их создатели. И сейчас эти лоты
+                стали культовыми.
               </p>
             </div>
           </div>
@@ -164,7 +164,7 @@
       <nav class="foo__menu">
         <ul class="foo__list">
           <li class="foo__item">
-            <a class="foo__link-no" href="#">главная</a>
+            <a class="foo__link foo__link-nounder" href="#">главная</a>
           </li>
           <li class="foo__item">
             <a class="foo__link" href="#">посмотреть лоты</a>
